--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 <body>
 
 <div id="startPage">
-  <h1>SCL-90 症状自评量表（简化版）</h1>
-  <p>共45题，请根据您最近一周的感受逐题作答。</p>
+  <h1>SCL-90 症状自评量表</h1>
+  <p>共90题，请根据您最近一周的感受逐题作答。</p>
   <div style="text-align:center;"><button onclick="startTest()">开始答题</button></div>
 </div>
 
