--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SCL-90 心理测评</title>
+  <title>SCL-90 心理测评（简化版）</title>
   <style>
     body {
       font-family: "Microsoft YaHei", sans-serif;
@@ -13,9 +13,12 @@
       background-color: #f9f9f9;
     }
     #startPage, #questionContainer, #result {
-      max-width: 100%;
-      box-sizing: border-box;
-    }
+  margin-top: 30px;
+  background: transparent;
+  padding: 0;
+  border-radius: 0;
+  box-shadow: none;
+}
     h1, h3 {
       font-size: 1.5em;
       text-align: center;
@@ -66,8 +69,10 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     ul {
-      padding-left: 20px;
-    }
+  padding-left: 20px;
+  margin: 0;
+  list-style: none;
+}
     @media (max-width: 480px) {
       .question {
         font-size: 1.1em;
@@ -85,8 +90,8 @@
 <body>
 
 <div id="startPage">
-  <h1>SCL-90 症状自评量表</h1>
-  <p>共90题，请根据您最近一周的感受逐题作答。</p>
+  <h1>SCL-90 症状自评量表（简化版）</h1>
+  <p>共45题，请根据您最近一周的感受逐题作答。</p>
   <div style="text-align:center;"><button onclick="startTest()">开始答题</button></div>
 </div>
 
