--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   "对旁人责备求全", "感到别人能控制自己的思想", "责怪别人制造麻烦", "忘性大", "担心自己的衣饰整齐及仪态的端正",
   "容易烦恼和激动", "胸痛", "害怕空旷的场所或街道", "感到自己的精力下降，活动减慢", "想结束自己的生命",
   "听到旁人听不到的声音", "发抖", "感到大多数人都不可信任", "胃口不好", "容易哭泣",
-  "同异性相处时感到害羞不自在", "受骗，中了圈套或有人想抓住", "无缘无故地突然感到害怕", "自己不能控制地大发脾气", "怕单独出门",
+  "同异性相处时感到害羞不自在", "感到受骗，中了圈套或有人想抓住自己", "无缘无故地突然感到害怕", "自己不能控制地大发脾气", "怕单独出门",
   "经常责怪自己", "腰痛", "感到难以完成任务", "感到孤独", "感到苦闷",
   "过分担忧", "对事物不感兴趣", "感到害怕", "我的感情容易受到伤害", "旁人能知道自己的私下想法",
   "感到别人不理解自己、不同情自己", "感到人们对自己不友好．不喜欢自己", "做事必须做得很慢，以保证做得正确", "心跳得很厉害", "恶心或胃部不舒服",
@@ -122,11 +122,11 @@
   "难以作出决定", "怕乘电车、公共汽车、地铁或火车", "呼吸有困难", "一阵阵发冷或发热", "因为感到害怕而避开某些东西、场合或活动",
   "脑子变空了", "身体发麻或刺痛", "喉咙有梗塞感", "感到前途没有希望", "不能集中注意",
   "感到身体的某一部分软弱无力", "感到紧张或容易紧张", "感到手或脚发重", "想到死亡的事", "吃得太多",
-  "当别人看着自己或谈论自己时感到不自在", "有一些不属于自己的想法", "有想打人或伤害他人的冲动", "醒得太平", "必须反复洗手、点数目或触摸某些东西",
+  "当别人看着自己或谈论自己时感到不自在", "有一些不属于自己的想法", "有想打人或伤害他人的冲动", "醒得太早", "必须反复洗手、点数目或触摸某些东西",
   "睡得不稳不深", "有想摔坏或破坏东西的冲动", "有一些别人没有的想法或念头", "感到对别人神经过敏", "在商店或电影院等人多的地方感到不自在",
   "感到任何事情都很困难", "一阵阵恐惧或惊恐", "感到公共场合吃东西很不舒服", "经常与人争论", "单独一人时神经很紧张",
   "别人对我的成绩没有作出恰当的价", "即使和别人在一起也感到孤单", "感到坐立不安心神不定", "感到自己没有什么价值", "感到熟悉的东西变成陌生或不像真的",
-  "大叫或摔东西", "害怕会在公共场合昏倒", "感到别人想占自己的便宜", "为一些有关性的想法而苦恼", "我认为应放为自己的过错而受到也罚",
+  "大叫或摔东西", "害怕会在公共场合昏倒", "感到别人想占自己的便宜", "为一些有关性的想法而苦恼", "我认为应该为自己的过错而受到惩罚",
   "感到要很快把事情做完", "感到自己的身体有严重问题", "从未感到和其他人很亲近", "感到自己有罪", "感到自己的脑子有毛病"
 ];
 
